todo-logic finish

--- a/src/index.html
+++ b/src/index.html
@@ -13,15 +13,15 @@
             <div class="tablehead">
                 <div class="id">Id</div>
                 <div class="name">Name</div>
-                <div class="title">Title</div>
-                <div class="complited">Complited</div>
             </div>
             <div class="border"></div>
             <div class="tablebody">
 
             </div>
         </div>
-
+        <div class="forinput"></div>
+        <div class="output-info">
+        </div>
     </div>
 </body>
 </html>
